refactor: Use JPA instead of java filters to get reservations for user